--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -143,5 +143,5 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libspeechd-dev libxkbcommon-dev libssl-dev
 
       - name: Publish library to crates.io
-        run: cargo publish --package ascii-rendr --token ${{ secrets.CARGO_TOKEN }}
+        run: cargo publish --package ascii-rendr --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
         continue-on-error: true
