--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -15,3 +15,6 @@ egui = "0.25"
 image = "0.24"
 rfd = "0.13"
 env_logger = "0.11"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winuser", "windef"] }
